--- a/main.html
+++ b/main.html
@@ -10,7 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<from method="post">
+<level for="Names">name</level>
+	<input type="text" id="names" required">
+	<level for="email">email</level>
+	<input type="email" id="names" required">
+<level for="gender_m">male</level>
+	<input type="radio" id="gender_m" name="gender" required>
+	<level for="gender_f">female</level>
+	<input type="radio" id="gender_f" name="gender" required>
+	<level for="cars">car</level>
+	<select id="cars">
+	<option value="option">select option</option>	
+	<option value="BMW">BMW</option>
+		<option value="Audi">Audi</option>
+		<option value="Marcedez">marcedez</option>
+	</select>
+	<level for="car age">car age</level>
+	<input type="number" id="car age" required">
+		<level for="date of purchase">dop</level>
+	<input type="date" id="dop" required">
+	  <label for="password">Password</label>
+        <input type="Password" id="password" required>
+	 <button type="submit">Submit</button>	
+	</from>
 </body>
-
 </html>
