--- a/main.html
+++ b/main.html
@@ -11,27 +11,35 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<from method="post">
-<level for="Names">name</level>
-	<input type="text" id="names" required">
-	<level for="email">email</level>
-	<input type="email" id="names" required">
-<level for="gender_m">male</level>
+<lebel for="name">Name</lebel>
+	<input type="text" id="name" required>
+		
+	<label for="email">Email</label>
+	<input type="email" id="email" required>
+		
+<lavbel for="gender_m">male</label>
 	<input type="radio" id="gender_m" name="gender" required>
-	<level for="gender_f">female</level>
+	
+	<label for="gender_f">Female</label>
 	<input type="radio" id="gender_f" name="gender" required>
-	<level for="cars">car</level>
+	
+	<label for="cars">car</label>
 	<select id="cars">
 	<option value="option">select option</option>	
 	<option value="BMW">BMW</option>
 		<option value="Audi">Audi</option>
 		<option value="Marcedez">marcedez</option>
 	</select>
-	<level for="car age">car age</level>
+	
+	<label for="carage">Car Age</label>
 	<input type="number" id="car age" required">
-		<level for="date of purchase">dop</level>
+	
+		<label for="dop">date of Purchase</label>
 	<input type="date" id="dop" required">
-	  <label for="password">Password</label>
+	
+	  <label for="Password">Password</label>
         <input type="Password" id="password" required>
+	
 	 <button type="submit">Submit</button>	
 	</from>
 </body>
