--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<from method="post">
+	<form method="post">
 <lebel for="name">Name</lebel>
 	<input type="text" id="name" required>
 		
