--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<form method="post">
-<lebel for="name">Name</lebel>
+<label for="name">Name</label>
 	<input type="text" id="name" required>
 		
 	<label for="email">Email</label>
